<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeoSpray</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="not_a_user_create_your_account">Not a user? Create your account.</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="logo_of_geospray">Logo of GeoSpray</string>
    <string name="image_upload">Image Upload</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="back_button">Back Button</string>
    <string name="upload_button">Upload Button</string>
    <string name="create_button">Create Button</string>
    <string name="profile_picture_button">Profile Picture Button</string>
    <string name="home_title">Artworks</string>
    <string name="create_account">Create account</string>
    <string name="new_account_profile_picture">New account profile picture</string>
    <string name="user_handle">"@user_handle"</string>
    <string name="down_arrow">Expand user description button</string>
    <string name="header_image">Header image</string>
    <string name="profile_picture">Profile picture</string>
    <string name="example_username">Username</string>
    <string name="following">" Following"</string>
    <string name="followers">" Followers"</string>
    <string name="empty_space">" "</string>
    <string name="number_placeholder">xxx</string>
</resources>