<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484155">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="228dp"
        android:layout_height="228dp"
        android:layout_marginTop="67dp"
        android:contentDescription="@string/logo_of_geospray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/log_username"
        android:layout_width="208dp"
        android:layout_height="48sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="#B0BEC5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/log_password"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#B0BEC5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_username" />


    <Button
        android:id="@+id/log_login"
        android:layout_width="208sp"
        android:layout_height="48sp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button"
        android:text="@string/login"
        android:textColor="#311B92"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_password" />


    <Button
        android:id="@+id/log_forgot_pwd"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:text="@string/forgot_your_password"
        android:textAllCaps="false"
        android:textColor="#B0BEC5"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_login"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/log_create_user"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:text="@string/not_a_user_create_your_account"
        android:textAllCaps="false"
        android:textColor="#B0BEC5"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_forgot_pwd" />

</androidx.constraintlayout.widget.ConstraintLayout>