<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484155">

    <ImageButton
        android:id="@+id/create_option_back"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/create_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="38dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/create_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/upload_button"
        app:srcCompat="@drawable/upload" />

    <ImageButton
        android:id="@+id/create_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/create" />



</androidx.constraintlayout.widget.ConstraintLayout>