<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484155">

    <ImageButton
        android:id="@+id/create_page_back"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="@string/back_button" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="654dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:orientation="vertical"
            tools:visibility="visible">


            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/box_corner"
                android:id="@+id/create_upload_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:scaleType="centerCrop"
                android:background="@drawable/rounded_corner"
                android:contentDescription="@string/image_upload"
                />

            <TextView
                android:layout_marginBottom="7dp"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30sp"
                android:text="@string/title"
                android:textSize="23dp"
                android:textColor="@color/text_color" />

            <EditText
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:id="@+id/create_title"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:ems="10"
                android:inputType="text"
                android:autofillHints="title"
                />

            <TextView
                android:layout_marginBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:text="@string/description"
                android:textSize="23dp"
                android:textColor="@color/text_color" />

            <EditText
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:id="@+id/create_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_gravity="center"
                android:gravity="top"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:ems="10"
                android:inputType="textMultiLine"
                android:autofillHints="Description" />

            <TextView
                android:layout_marginBottom="7dp"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/location"
                android:textSize="23dp"
                android:textColor="@color/text_color" />

            <EditText
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:id="@+id/create_location"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:ems="10"
                android:inputType="text"
                android:autofillHints="location"
                />

            <Button
                android:id="@+id/create_upload_submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="35sp"
                android:layout_marginBottom="60sp"
                android:backgroundTint="@color/button"
                android:text="@string/submit"
                android:textSize="25dp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>