<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484155">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/create_account"
        android:textSize="32sp"
        android:textColor="#B0BEC5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/new_account_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:srcCompat="@drawable/new_user_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_textField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/username"
        android:textColorHint="#B0BEC5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingStart="4dp"
            android:background="@drawable/rounded_corner"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="@string/password"
        android:textColorHint="#B0BEC5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingStart="4dp"
            android:background="@drawable/rounded_corner"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/log_login"
        android:layout_width="300sp"
        android:layout_height="48sp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/button"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#311B92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textField" />

</androidx.constraintlayout.widget.ConstraintLayout>